welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: illegal start of simple pattern
for ( <- 1 to pas) {
      ^Program:15: error: '<-' expected but '}' found.
}
^