welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit : Boolean = false;
var pas : Int = 0;
while(vuBiscuit == false) {
	avance();
	pas = pas + 1;
	if (estSurBiscuit == true) {
		vuBiscuit = true;
	}
}
for ( <- 1 to pas) {
	recule();
}
}
